--- a/Pokedex_2022-CSharp/Ventana2.resx
+++ b/Pokedex_2022-CSharp/Ventana2.resx
@@ -118,6 +118,103 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAFsCAYAAAC6pgFGAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAANdQAADXUAV5l5QgAABVSSURBVHhe7d0/rp1ZVoZxOyRD6gAnHULkjAkgBkHAHFAT
+        tJqIISBKqohJgIQ6ReoJgNQ5Qc+k4Ctpo8Xp99j7ep+ya33r90hPl2r53Hv87jrfXq9df/rdX/7df/9A
+        kiRnqQCQJDlQBYAkyYEqACRJDlQBIElyoAoASZIDVQBIkhyoAkCS5EAVAJIkB6oAkCQ5UAWAJMmBKgAk
+        SQ5UASBJcqAKAEmSA333F3/7Hz+QJMlZKgAkSQ5UASBJcqAKAEmSA333Z3/1Tz+QJMlZKgAkSQ5UASBJ
+        cqAKAEmSA1UASJIcqAJAkuRAFQCSJAeqAJAkOVAFgCTJgSoAJEkOVAEgSXKgCgBJkgN9979c/0OSJGcZ
+        hyRJ8s5+eP/xh3/4m38Z6eTsy+lnIL/8aT5F+WfnVwDCfJIuAPnTfIryy5/mU1QAwnySLgD503yK8suf
+        5lNUAMJ8ki4A+dN8ivLLn+ZTVADCfJIuAPnTfIryy5/mU1QAwnySLgD503yK8suf5lNUAMJ8ki6AGfm/
+        //VvfzT+q0AkW7me5/Ssv0UFIMwnqQAoACR7+bIC8Ofv/vr/vtk0J2dfTj+DKfnXxfG7X/6CZHMfi8CX
+        qgCE+SQVAAWAZC8VgBeoADiDu+e3+Mn7eloEFIAwn6QCoACQ7OlLCsC/f//7kU7Ovpx+BnfP/yUF4K2k
+        70Hyp/dZAUh3QVIBCPNJKgAKwKNvJX0Pkj+9CsCBCoAzUACeL/z1tc98RnoPkq93PYuPBWCZ7oSqAhDm
+        k1QAFIBnrK995jPSe5B8vetZTMv/Mt0JVQUgzCepAMwtAI+s1z76j3/6J//P9JrLR9J7knyd69lLy/8y
+        3QlVBSDMJ6kAKACL9dpHFQDy5+l69tLyv0x3QlUBCPNJKgAKwHrN8nHhf87Hr1+k9yT5Otczl5b/ZboT
+        qgpAmE9SAVAA1muWacl/ysevX6T3JPk61zOXlv9luhOqCkCYT1IBmFcAHlmvScv9La7v80h9b5Kvcz1z
+        aflfpjuhqgCE+SQVAAVgvSYt9be4vs8j9b1Jvs71zKXlf5nuhKoCEOaTVADmFoD1Y8u01C+/9HWL+t4k
+        X+d61tLyv0x3QlUBCPNJKgAKwDIt9csvfd2ivjfJ17metbT8L9OdUFUAwnySCoACkJb55frxR976dfW9
+        Sb7O9ayl5X+Z7oSqAhDmk1QAFIC0xC/Xjz/y1q+r703yda5nLS3/y3QnVBWAMJ+kAqAAfM5H0muSi/re
+        JF/netbS8r9Md0JVAQjzSSoACsDnfCS9Jrmo703yda5nLS3/y3QnVBWAMJ+kAqAALJ9x+rr63iRf53rW
+        0vK/THdCVQEI80kqAArA8hmnr6vvTfJ1rmctLf/LdCdUFYAwn6QCMLcALNZrTnn2fep7k3yd65lLy/8y
+        3QnVHwsAyXu6Loh6aTyyXnPKs+9T35vk61zP3If3H6PpTqj6HYAwn+T0M7h7/nVBpMtjsV6zfCvPvj69
+        J8nXuZ659Kv/y3QnVBWAMJ+kAqAArNcs38qzr0/vSfJ1rmcuLf/LdCdUFYAwn6QCoAAs1msffSS95vKR
+        9J4kX+d69tLyv0x3QlUBCPNJKgAKwGK99tFH0msuH0nvSfJ1rmcvLf/LdCdUFYAwn6QCMLcALJ+xvvaZ
+        z0jvQfL1rmcxLf/LdCdUFYAwn6QCoAA8Y33tM5+R3oPk613PYlr+l+lOqCoAYT5JBUABePStpO9B8qdX
+        AThQAXAGCsAf+1bS9yD506sAHKgAOAMFgGRXFYADFQBnoACQ7KoCcKAC4AwUAJJdVQAOVACcgQJAsqsK
+        wIEKgDNQAEh2VQE4UAFwBlMKwB9+8x3Jm6kAHKgAOAMFgGRXFYADFQBnoACQ7KoCcKAC4AymFAAA90MB
+        OFABcAYKAICuKAAHKgDOQAEA0BUF4EAFwBkoAAC6ogAcqAA4AwUAQFcUgAMVAGegAADoigJwoALgDBQA
+        AF1RAA5UAJyBAgCgKwrAgQqAM1AAAHRFAThQAXAGCgCArigAByoAzkABANAVBeBABcAZKAAAuqIAHKgA
+        OAMFAEBXFIADFQBnoAAA6IoCcKAC4AwUAABdUQAOVACcgQIAoCsKwIEKgDNQAAB0RQE4UAFwBgoAgK4o
+        AAcqAM5AAQDQFQXgQAXAGSgAALqiAByoADgDBQBAVxSAAxUAZ6AAAOiKAnCgAuAMFAAAXVEADlQAnIEC
+        AKArCsCBCoAzUAAAdEUBOFABcAYKAICuKAAHKgDOQAEA0BUF4EAFwBkoAAC6ogAcqAA4AwUAQFcUgAMV
+        AGegAADoigJwoALgDBQAAF1RAA5UAJyBAgCgKwrAgQqAM1AAAHRFAThQAXAGCgCArigAByoAzuDu+ddF
+        oAgA9+Fzi3+Z7oSqAhDmk1QAFAAAvVAAXqAC4Aym5F8Xwro4SPa1LvlPme6CqgIQ5pNUABQAkr2sS/5T
+        prugqgCE+SQVgNn5P7z/GC+OKcovf5rfxfTMVxWAMJ+kAqAApItjivLLn+Z3MT3zVQUgzCepACgA6eKY
+        ovzyp/ldTM98VQEI80kqAApAujimKL/8aX4X0zNfVQDCfJIKgAKQLo4pyi9/mt/F9MxXFYAwn6QCIP/1
+        x3R5TNAClD/Nu/v4nD9TAQjzSVqA8l9/TJfIBC1A+dO8u4/P+TMVgDCfpAUof/3zdJncWQtQ/jTvan2W
+        d1QAwnySFqD89c/TpXJnLUD507yr9Vne8ccCQJIkZ+l3AMJ8ktPPQH7503yK8s/OrwCE+SRdAPKn+RTl
+        lz/Np6gAhPkkXQDyp/kU5Zc/zaeoAIT5JF0A8qf5FOWXP82nqACE+SRdAPKn+RTllz/Np6gAhPkkXQDy
+        p/kU5Zc/zaeoAIT5JF0A8qf5FOWXP82nqACE+SRdAPKn+RTllz/Np6gAhPkkXQDyp/kU5Zc/zaeoAIT5
+        JF0A8qf5FOWXP82nqACE+SRdAPKn+RTllz/Np6gAhPkkXQDyp/kU5Zc/zaeoAIT5JF0A8qf5FOWXP82n
+        qACE+SRdAPKn+RTllz/Np6gAhPkkXQDyp/kU5Zc/zaeoAIT5JF0A8qf5FOWXP82nqACE+SRdAPKn+RTl
+        lz/Np6gAhPkkXQDyp/kU5Zc/zaeoAIT5JF0A8qf5FOWXP82nqACE+SRdAPKn+RTllz/Np6gAhPkkXQDy
+        p/kU5Zc/zaeoAIT5JF0A8qf5FOWXP82nqACE+SRdAPKn+RTllz/Np6gAhPkkXQDyp/kU5Zc/zaeoAIT5
+        JF0A8qf5FOWXP82n+E0LwL99919x/rWc/hf/0gUgf5pPUX7503yK37QA/Os//2ecfy2n/8W/dAHIn+ZT
+        lF/+NJ+iAhDmk3QByJ/mU5Rf/jSfor8FEOaTdAHIn+ZTlF/+NJ+ifwgwzCfpApA/zacov/xpPkUFIMwn
+        6QKQP82nKL/8aT5FBSDMJ+kCkD/Npyi//Gk+RQUgzCfpApA/zacov/xpPkUFIMwn6QKQP82nKL/8aT5F
+        BSDMJ+kCkD/Npyi//Gk+RQUgzCfpApA/zacov/xpPkUFIMwn6QKQP82nKL/8aT5FBSDMJ+kCkD/NO/v9
+        r3/7o+/evSNv6fqMp8//W1QAwnySFqD8ad5ZBYB3VwF4gQqAM5D/PvkfFz9wV15VBBSAMJ+kBSh/mndU
+        AcAUFIAXqAA4A/nvk9/ixzTWZz49DzsqAGE+SQtQ/jTvqAKAaSgAByoAzkB+BQDoigJwoALgDORXAICu
+        KAAHKgDOQH4FAOiKAnCgAuAM5FcAgK4oAAcqAM5AfgUA6Mr6zK9/HfCt/1qgAhDmk7QA5U/zjioAmIYC
+        cKAC4AzkVwCArjwrAMv0nFQVgDCfpAUof5p3VAHANBSAAxUAZyC/AgB0RQE4UAFwBvIrAEBXFIADFQBn
+        IL8CAHRFAThQAXAG8isAQFcUgAMVAGcgvwIAdEUBOFABcAbyKwBAVxSAAxUAZyC/AgB0RQE4UAFwBvIr
+        AEBXFIADFQBnIL8CAHRFAThQAXAG8isAQFcUgAMVAGcgvwIAdEUBOFABcAbyKwBAV15SAEiyuwoAprE+
+        8x/ef4ym56TqdwDCfJLTz0B+vwMAdGV95tOv/i/Tc1JVAMJ8khag/GneUQUA01AADlQAnIH8CgDQFQXg
+        QAXAGcivAABdUQAOVACcgfwKANAVBeBABcAZyK8AAF1RAA5UAJyB/AoA0BUF4EAFwBnIf78C8Pe/+hU5
+        QgXgQAXAGcivAJBdVQAOVACcgfwKANlVBeBABcAZyH+/AgBMQQE4UAFwBvIrAEBXFIADFQBnIL8CAHRF
+        AThQAXAG8isAQFcUgAMVAGcgvwIAdEUBOFABcAbyKwBAVxSAAxUAZyC/AgB0RQE4UAFwBvIrAEBXFIAD
+        FQBnIL8CAHRFAThQAXAG8isAQFcUgAMVAGcgvwIAdEUBOFABcAbyKwBAVxSAAxUAZyC/AgB0RQE4UAFw
+        BvIrAEBXFIADFQBnIL8CAHRFAThQAXAG8isAQFcUgAMVAGcgvwIAdEUBOFABcAbyKwBAVxSAAxUAZyC/
+        AgB0RQE4UAFwBvIrAEBXFIADFQBnIL8CAHRFAThQAXAG8isAQFcUgAMVAGcgvwIAdEUBOFABcAbyKwBA
+        VxSAAxUAZyC/AgB0RQE4UAFwBvIrAEBXFIADFQBnIL8CAHRFAThQAXAG8isAQFcUgAMVAGcg/33yr0tP
+        EcDd+dziX6bnpKoAhPkkLUD507yj69JTAHB3FIAXqAA4A/nvl39dfuuSJO9mXfKfMj0fVQUgzCdpAcqf
+        5p1dl1+6OMk7WJf8p0zPR1UBCPNJWoDyp/kErwvyw/uPf3RpTlL+e+dPn/uqAhDmk7QA5U/zCV4XpAUo
+        f5rfxfS5ryoAYT5JC1D+NJ/gdUFagPKn+V1Mn/uqAhDmk7QA5U/zCV4XpAUof5rfxfS5ryoAYT5JC1D+
+        NJ/gdUFagPKn+V1Mn/uqAhDmk7QA5U/zCV4XpAUof5rfxfS5ryoAYT5JC1D+NJ/gdUFagPKn+V1Mn/uq
+        AhDmk7QA5U/zCV4XpAUof5rfxfS5ryoAYT5JC1D+NJ/ilT9dnFNUAO6ZP33WkwpAmE/SApA/zad45U8X
+        6BQVAAUg/sAEp19+lxaA/Gk+RfnlT/MpKgBhPkkXgPxpPkX55U/zKSoAYT5JF4D8aT5F+eVP8ykqAGE+
+        SReA/Gk+RfnlT/MpKgBhPkkXgPxpPkX55U/zKSoAYT5JF4D8aT5F+eVP8ykqAGE+SReA/Gk+RfnlT/Mp
+        KgBhPkkXgPxpPkX55U/zKSoAYT5JF4D8aT5F+eVP8ykqAGE+SReA/Gk+RfnlT/MpHheA9Z8efPfuHUmS
+        /Il963/y95k/FoATFQCSJL+e1/+HwWXayW/xi38H4HHx/+6Xv3izf/jNdyRJjjXtxs+59u7aw2lH7/iz
+        KQAAAEyg7r60Gz/nNy8AJ4t/WQ8BAIAJ1N2XduOuaw+nHb2jAgAAwFek7r60G3dVAAAAaETdfWk37qoA
+        AADQiLr70m7cVQEAAKARdfel3bjr2sPrHwZ86z8UqAAAAPAVqbsv7cZdFQAAABpRd1/ajbs+KwDLtLur
+        CgAAAF+RuvvSbtxVAQAAoBF196XduOvnCsAy7fBLBQAAgK9I3X1pN+6qAAAA0Ii6+9Ju3FUBAACgEXX3
+        pd24qwIAAEAj6u5Lu3FXBQAAgEbU3Zd2464KAAAAjai7L+3GXRUAAAAaUXdf2o27KgAAADSi7r60G3dV
+        AAAAaETdfWk37qoAAADQiLr70m7cVQEAAKARdfel3birAgAAQCPq7ku7cVcFAACARtTdl3bjrgoAAACN
+        qLsv7cZdFQAAABpRd1/ajbsqAAAANKLuvrQbd1UAAABoRN19aTfuqgAAANCIuvvSbtxVAQAAoBF196Xd
+        uKsCAABAI+ruS7txVwUAAIBG1N2XduOuCgAAAI2ouy/txl0VAAAAGlF3X9qNuyoAAAA0ou6+tBt3VQAA
+        AGhE3X1pN+6qAAAA0Ii6+9Ju3FUBAACgEXX3pd24qwIAAEAj6u5Lu3FXBQAAgEbU3Zd2464KAAAAjai7
+        L+3GXRUAAAAaUXdf2o27KgAAADSi7r60G3dVAAAAaETdfWk37qoAAADQiLr70m7cVQEAAKARdfel3bir
+        AgAAQCPq7ku7cVcFAACARtTdl3bjrgoAAACNqLsv7cZdFQAAABpRd1/ajbsqAAAANKLuvrQbd1UAAABo
+        RN19aTfuqgAAANCIuvvSbtxVAQAAoBF196XduKsCAABAI+ruS7txVwUAAIBG1N2XduOuCgAAAI2ouy/t
+        xl0VAAAAGlF3X9qNuyoAAAA0ou6+tBt3VQAAAGhE3X1pN+6qAAAA0Ii6+9Ju3FUBAACgEXX3pd24qwIA
+        AEAj6u5Lu3HXlxSAL1EBAADg7dTdl3bjrmsPf3j/8ZOmHX7pdwAAAPiK1N2XduOuaw+nX/VX0w6/VAAA
+        APiK1N2XduOuCgAAAI2ouy/txl0VAAAAGlF3X9qNuyoAAAA0ou6+tBt3VQAAAGhE3X1pN+6qAAAA0Ii6
+        +9Ju3FUBAACgEXX3pd24qwIAAEAj6u5Lu3FXBQAAgEbU3Zd2464KAAAAjai7L+3GXRUAAAAaUXdf2o27
+        KgAAADSi7r60G3dVAAAAaETdfWk37qoAAADQiLr70m7cVQEAAKARdfel3birAgAAQCPq7ku7cVcFAACA
+        RtTdl3bjrgoAAACNqLsv7cZdFQAAABpRd1/ajbsqAAAANKLuvrQbd1UAAABoRN19aTfuqgAAANCIuvvS
+        btxVAQAAoBF196XduKsCAABAI+ruS7txVwUAAIBG1N2XduOuCgAAAI2ouy/txl0VAAAAGlF3X9qNu36z
+        ArC+8UkRqIcAAMAE6u5Lu/Fz7i7+Zdrhlz+bAkCS5DTTbvyc37wALNcbrJ8QSZL86azLfce0uy8VAJIk
+        G1mX+45pd18eF4Bd00/qW/vh/cc4n+T0M5Bf/jSfovwz8qedfKkAhPkkXQDyp/kU5Zc/ze9m2smXCkCY
+        T9IFIH+aT1F++dP8bqadfKkAhPkkXQDyp/kU5Zc/ze9m2smXCkCYT9IFIH+aT1F++dP8bqadfPnVCsAy
+        /eS+ldM//JcuAPnTfIryy5/mdzHt4KoCEOaTdAHIn+ZTlF/+NL+LaQdXv3oBWKaf7Nd2+of/0gUgf5pP
+        UX7507y7aecmFYAwn6QLQP40n6L88qd5d9POTX6zAvBzcHL25fQzkF/+NJ+i/LPzKwBhPkkXgPxpPkX5
+        5U/zKSoAYT5JF4D8aT5F+eVP8xn+/of/Ab59rf79wMKuAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAgIAAAAEAIAAoCAEAFgAAACgAAACAAAAAAAEAAAEAIAAAAAAAAAgBAAAAAAAAAAAAAAAAAAAA
